--- a/laptops.yml
+++ b/laptops.yml
@@ -3,9 +3,8 @@
 - hosts: local
 #  user: james
   roles:
-#    - role: DevLaptop
+    - role: DevLaptop
     - role: awsManager
-    - role: nodejs
+#    - role: nodejs
 #    - role: minecraft #when: {{ ansible_hostname }}="carl"
 #    - role: sublimetext #when: {{ ansible_userspace_bits }}="64"
-
