Added a username and password option and unique Site name to DRUSH SI. Include  password in Site Name

--- a/drupalsite.yml
+++ b/drupalsite.yml
@@ -4,11 +4,16 @@
   user: james
   sudo: yes
 
+
   vars_prompt:
     - name: "sitename"
       prompt: "Enter Site name"
       private: no
       default: "mydrupal"
+
+    - name: "sitepass"
+      prompt: "Enter the admin password for the new site"
+      private: yes
 
   roles:
     - role: webtier
