--- a/laptops.yml
+++ b/laptops.yml
@@ -5,7 +5,8 @@
   roles:
     - role: DevLaptop
     - role: awsManager
-    - role: juju
+    - role: ipython
+#    - role: juju
     - role: nodejs
 #    - role: minecraft #when: {{ ansible_hostname }}="carl"
 #    - role: sublimetext #when: {{ ansible_userspace_bits }}="64"
